--- a/style.css
+++ b/style.css
@@ -277,75 +277,6 @@ p img {
   position: absolute;
   z-index:-1;
 }
-/*.tb-megamenu li:hover .mega-dropdown-menu {
-	display: block;
-}*/
-
-.block-tb-megamenu {
-/* 	border-bottom: 1px solid #717171; */
-}
-.tb-megamenu .collapse {
-	display: block;
-}
-.tb-megamenu .dropdown-menu a {
-	color: #fff;
-}
-.tb-megamenu {
-	/*width: 564px;*/
-	width: 612px;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: #333333;
-}
-.tb-megamenu .dropdown-menu {
-	border-bottom-color: transparent;
-	background-color: #333333;
-}
-.tb-megamenu .nav > li > a {
-	font-weight: bold;
-	font-size: 21px;
-	color: #fff;
-	padding-bottom: 11px;
-	padding-top: 8px;
-}
-.tb-megamenu .nav > li {
-	border-left: 1px solid #717171;
-	border-top: none;
-}
-.tb-megamenu .nav > li:hover .dropdown-menu{
-	/* display:block; */
-}
-
-.tb-megamenu .nav > li:last-child {
-	border-right: 1px solid #717171;
-}
-.tb-megamenu .nav > li > a {
-	border-right: none;
-	text-decoration: none;
-	border-top: 5px solid transparent;
-}
-.tb-megamenu .nav > li > a:hover {
-	background-color: #333333;
-}
-.tb-megamenu .nav li.dropdown > .dropdown-toggle {
-	border-top: 5px solid transparent;
-}
-.tb-megamenu .nav li.dropdown.active > .dropdown-toggle {
-	border-right: none;
-	background-color: #333333;
-	border-top: 5px solid #fff;
-}
-.tb-megamenu .nav > li > a:focus, 
-.tb-megamenu .nav > li > a:hover {
-	color: #fff;
-	background-color: #333333;
-}
-
-.tb-megamenu .nav > .active > a, 
-.tb-megamenu .nav > .active > a:hover {
-	background-color: #333333;
-	border-top: 5px solid #fff;
-}
 
 
 section#block-search-form {
@@ -471,7 +402,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 }
 
 .node-type-persona .view-role-page-combo-articles {
-	margin-top: 90px;
+	margin-top: 0px;
 }
 .node-type-persona .panel-col-top .pane-node-body {
 	margin-top: 48px;
@@ -1060,6 +991,116 @@ footer .region-footer:before {
 .footer-bottom-links li:last-child a {
 	border-right: none;
 	padding-right: 0;
+}
+
+/*  Dropdown navigation */
+
+/*.tb-megamenu li:hover .mega-dropdown-menu {
+	display: block;
+}*/
+
+.block-tb-megamenu {
+/* 	border-bottom: 1px solid #717171; */
+}
+.tb-megamenu .collapse {
+	display: block;
+}
+.tb-megamenu .dropdown-menu a {
+	color: #fff;
+}
+.tb-megamenu {
+	/*width: 564px;*/
+	width: 612px;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #333333;
+}
+.tb-megamenu .dropdown-menu {
+	border-bottom-color: transparent;
+	background-color: #333333;
+}
+.tb-megamenu .nav > li > a {
+	font-weight: bold;
+	font-size: 21px;
+	color: #fff;
+	padding-bottom: 11px;
+	padding-top: 8px;
+}
+.tb-megamenu .nav li.dropdown.open > .dropdown-toggle {
+  color: #FFF;
+  background-color: transparent;
+}
+
+.tb-megamenu .dropdown-menu li > a:hover, 
+.tb-megamenu .dropdown-menu li > a:focus, 
+.tb-megamenu .dropdown-submenu:hover > a {
+  color: #FFF;
+  background-color: transparent;
+}
+.tb-megamenu .nav li.dropdown.active > .dropdown-toggle,
+.tb-megamenu .nav li.dropdown.open.active > .dropdown-toggle {
+  background-color: transparent;  
+  border-right:none;
+  color: #fff;
+}
+.tb-megamenu .nav > li.dropdown.open.active > a:hover, 
+.tb-megamenu .nav > li.dropdown.open.active > a:focus,
+.tb-megamenu .nav > li.dropdown.animating.active > a:hover, 
+.tb-megamenu .nav > li.dropdown.animating.active > a:focus,
+.tb-megamenu .nav > li.dropdown.open > a:hover, 
+.tb-megamenu .nav > li.dropdown.open > a:focus,
+.tb-megamenu .nav > li.dropdown.animating > a:hover, 
+.tb-megamenu .nav > li.dropdown.animating > a:focus {
+  background-color: transparent;
+  border-right: none;
+  color: #FFF;
+  border-top: 5px solid #fff;
+}
+.tb-megamenu .nav > li {
+	border-left: 1px solid #717171;
+	border-top: none;
+}
+.tb-megamenu .nav > li:hover .dropdown-menu{
+	/* display:block; */
+}
+
+.tb-megamenu .nav > li:last-child {
+	border-right: 1px solid #717171;
+}
+.tb-megamenu .nav > li > a {
+	border-right: none;
+	text-decoration: none;
+	border-top: 5px solid transparent;
+}
+.tb-megamenu .nav > li > a:hover {
+	background-color: #333333;
+}
+.tb-megamenu .nav li.dropdown > .dropdown-toggle {
+	border-top: 5px solid transparent;
+}
+.tb-megamenu .nav li.dropdown.active > .dropdown-toggle {
+	border-right: none;
+	background-color: #333333;
+	border-top: 5px solid #fff;
+}
+.tb-megamenu .nav > li > a:focus, 
+.tb-megamenu .nav > li > a:hover {
+	color: #fff;
+	background-color: #333333;
+}
+
+.tb-megamenu .nav > .active > a, 
+.tb-megamenu .nav > .active > a:hover {
+	background-color: #333333;
+	border-top: 5px solid #fff;
+}
+.mega-inner .views-field {
+	margin-top:10px;
+}
+.mega-inner .views-field a:before {
+	content:"\00BB";
+	display:inline-block;
+	margin-right:10px;
 }
 
 /* PRINT */
