--- a/style.css
+++ b/style.css
@@ -456,6 +456,10 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	border-bottom: 1px solid #000;
 	padding-bottom: 40px;
 	margin-bottom: 30px;
+	padding:5px 10px;
+}
+.node-type-persona .panel-col-first .views-row:hover {
+	background-color:#f4f2f0;
 }
 .node-type-persona .panel-col-first .views-row:last-child {
 	border-bottom: none;
@@ -465,6 +469,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	display: block;
 	margin-bottom: 30px;
 }
+
 .node-type-persona .panel-col-first .field-content {
 	margin-bottom: 20px;
 }
@@ -501,7 +506,6 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	padding-bottom: 34px;
 }
 .node-type-combo-article .panel-col-first .article-parent-class {
-	background-color: #fff;
 	padding-top: 22px;
 	padding-bottom: 43px;
 	padding-right: 27px;
@@ -531,6 +535,10 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	padding-top: 0;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #333333;
+	padding:5px 10px;
+} 
+.node-type-combo-article .panel-col-first .views-row:hover {
+	background-color:#f4f2f0;
 }
 .node-type-combo-article .footer {
 	margin-top: 0;
@@ -579,6 +587,9 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	padding-left: 0;
 	padding-bottom: 0;
 	padding-right: 0;
+}
+.node-type-article .pane-audience .views-row:hover{
+	background-color:#f4f2f0;
 }
 .node-type-article .panel-col-top .pane-node-title a {
 	color: #fff;
@@ -636,7 +647,6 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 .node-type-article .panel-col-middle .item-list ul li {
 	list-style: none;
 }
-
 .node-type-article .panel-col-middle table {
 	margin: 45px auto 0 auto;
 	width: 1000px;
@@ -761,7 +771,10 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	float: left;
 	margin-right: 20px;
 	min-height: 202px;
-	padding-left: 2px;
+	padding:0 15px;
+}
+.references-list ul li:hover {
+	background-color:#f4f2f0;
 }
 .references-list ul li .views-field-field-document-type {
 	font-weight: bold;
@@ -1125,3 +1138,91 @@ footer .region-footer:before {
 	}
 }
 
+/* Welcome Page */
+
+.page-welcome .main-container{
+	text-align:center;
+	margin-bottom:50px;
+	margin-top:50px;
+	background-color:#f4f2f0 ;
+	padding:50px 0;
+	position:relative;
+}
+.page-welcome .main-container:before{
+	  content: "";
+  display: block;
+  background-color: #f4f2f0;
+  top:0;
+  left: -100%;
+  right: -100%;
+  height: 100%;
+  position: absolute;
+  z-index:-1;
+}
+.page-welcome .main-container .btn-primary {
+	padding: 12px 15px;
+	display:inline-block;
+	margin-top:20px;
+	text-transform:uppercase;
+	text-decoration:none;
+	width:250px;
+
+}
+.page-welcome .main-container .btn-primary:hover,
+.page-welcome .main-container .btn-primary:active {
+	color:#FFF;
+
+}
+.page-welcome .welcome-intro-text {
+	line-height:1.5em;
+	font-size:16px;
+}
+
+
+/* User Login */
+
+
+.page-user-login .main-container,
+.page-user-password .main-container{
+	margin-bottom:50px;
+	margin-top:50px;
+	background-color:#f4f2f0 ;
+	padding:50px 0;
+	position:relative;
+}
+.page-user-login .main-container:before,
+.page-user-password .main-container:before{
+	content: "";
+	display: block;
+	background-color: #f4f2f0;
+	top:0;
+	left: -100%;
+	right: -100%;
+	height: 100%;
+	position: absolute;
+	z-index:-1;
+}
+.page-user-login .main-container .btn-primary,
+.page-user-password .main-container .btn-primary {
+	padding: 12px 15px;
+	display:inline-block;
+	margin-top:20px;
+	text-transform:uppercase;
+	text-decoration:none;
+	width:auto;
+
+}
+
+.page-user-login .main-container .btn-primary:hover,
+.page-user-login .main-container .btn-primary:active,
+.page-user-password .main-container .btn-primary:hover,
+.page-user-password .main-container .btn-primary:active {
+	color:#FFF;
+
+}
+
+.page-user-login input,
+.page-user-password input {
+	background-color:#FFF;
+	border: 1px solid #bab8b7;
+}
