--- a/style.less
+++ b/style.less
@@ -1,15 +1,4 @@
-/*
- * This file should get overwritten if Method 1 is used. If Method 2 is chosen,
- * remove this comment and start adding your styles to this file.
- */
-
- /** 
-
-COLOURS
-magenta = #C10B4C
-grey1 = #717171;
-
- **/
+@import "custom_bootstrap";
 body {
 	width: 100%;
 	overflow-x: hidden;
@@ -18,7 +7,7 @@ body {
 	margin-right: -15px;
 	margin-left: -15px;
 }
-}
+
 .panel-2col-stacked .panel-col-top, 
 .panel-2col-stacked .panel-col-bottom,
 .panel-2col-bricks .panel-col-top, 
@@ -53,7 +42,7 @@ a:link {
 }
 
 a:hover {
-	color: #C10B4C;
+	color: @magenta;
 	text-decoration: none;
 }
 
@@ -69,14 +58,14 @@ p img {
 .btn-primary:focus, 
 .btn-primary:active, 
 .btn-primary.active {
-	background-color: #C10B4C;
-	border-color: #C10B4C;
+	background-color: @magenta;
+	border-color: @magenta;
 	color: #000;
 }
 
 .btn-primary {
-	background-color: #C10B4C;
-	border-color: #C10B4C;
+	background-color: @magenta;
+	border-color: @magenta;
 	border-radius: 0;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -90,7 +79,7 @@ p img {
 	width: 0;
 	height: 0;
 	border-top: 50px solid transparent;
-	border-right: 100px solid #C10B4C;
+	border-right: 100px solid @magenta;
 	border-bottom: 50px solid transparent;
 }
 
@@ -190,8 +179,8 @@ p img {
 .pagination>.active>span:hover, 
 .pagination>.active>a:focus, 
 .pagination>.active>span:focus {
-	background-color: #C10B4C;
-	border-color: #C10B4C;
+	background-color: @magenta;
+	border-color: @magenta;
 }
 
 .pagination>li:last-child>a, 
@@ -261,7 +250,7 @@ p img {
 	background-color: #fff;
 }
 .navbar-default .navbar-nav > li > a {
-	color: #C10B4C;
+	color: @magenta;
 	text-decoration: none;
 }
 .navbar-nav > li > a {
@@ -344,7 +333,7 @@ form#search-block-form .glyphicon-search {
 	-ms-transform: scale(-1, 1);
 	-o-transform: scale(-1, 1);
 	transform: scale(-1, 1);
-	color: #C10B4C;
+	color: @magenta;
 	font-size: 20px;
 }
 
@@ -497,10 +486,10 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 
 /* Combo article */
 .node-type-combo-article .panel-col-top {
-	background-color: #C10B4C;
+	background-color: @magenta;
 }
 .node-type-combo-article .panel-col-top:before {
-	background-color: #C10B4C;
+	background-color: @magenta;
 }
 .node-type-combo-article .pane-combo-page-articles {
 	border-top: 5px solid #333333;
@@ -538,7 +527,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	font-size: 47px;
 }
 .node-type-combo-article .panel-col-first .article-parent-class .article-specification-class {
-	color: #C10B4C;
+	color: @magenta;
 	font-weight: bold;
 }
 .node-type-combo-article .panel-col-first .article-parent-class .article-date-class {
@@ -561,6 +550,12 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 .node-type-combo-article .panel-col-first .views-row:hover {
 	background-color:#f4f2f0;
 }
+.node-type-combo-article .panel-col-first .views-row a {
+	text-decoration:none;
+}
+.node-type-combo-article .panel-col-first .views-row a:hover {
+	color:#333333;
+}
 .node-type-combo-article .footer {
 	margin-top: 0;
 }
@@ -574,7 +569,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 	width: 100%;
 }
 .node-type-article .panel-col-top {
-	background-color: #C10B4C;
+	background-color: @magenta;
 	margin-bottom: 0;
 	padding-top: 34px;
 }
@@ -776,7 +771,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 }
 .pane-homepage-reference-articles .pane-title {
 	text-align: center;
-	color: #C10B4C;
+	color: @magenta;
 	margin-top: 0;
 	margin-bottom: 38px;
 }
@@ -799,7 +794,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 }
 .references-list ul li .views-field-field-document-type {
 	font-weight: bold;
-	color: #C10B4C;
+	color: @magenta;
 	padding-top: 42px;
 }
 .references-list ul li .views-field-title a {
@@ -873,7 +868,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 }
 
 .views-glossary-module .attachment .view-content {
-	background-color: #C10B4C;
+	background-color: @magenta;
 	padding-left: 11px;
 	padding-right: 11px;
 }
@@ -924,7 +919,7 @@ footer .region-footer:before {
 .footer .region-footer .block-title {
 	text-align: center;
 	font-size: 20px;
-	border-bottom: 1px solid #717171;
+	border-bottom: 1px solid @gray1;
 	padding-top: 25px;
 	padding-bottom: 25px;
 }
@@ -955,7 +950,7 @@ footer .region-footer:before {
 	margin-bottom: 12px;
 }
 .footer .region-footer a:hover {
-	color: #C10B4C;
+	color: @magenta;
 }
 .footer .region-footer .pane-panels-mini .pane-menu-menu-help-support {
 	width: 230px;
@@ -970,7 +965,7 @@ footer .region-footer:before {
 	margin-bottom: 12px;
 }
 .footer .region-footer .pane-panels-mini .nav a:hover {
-	color: #C10B4C;
+	color: @magenta;
 }
 .footer .region-footer .views-label-title-1 {
 	display: none;
@@ -1034,7 +1029,7 @@ footer .region-footer:before {
 }*/
 
 .block-tb-megamenu {
-/* 	border-bottom: 1px solid #717171; */
+/* 	border-bottom: 1px solid @gray1; */
 }
 .tb-megamenu .collapse {
 	display: block;
@@ -1091,7 +1086,7 @@ footer .region-footer:before {
   border-top: 5px solid #fff;
 }
 .tb-megamenu .nav > li {
-	border-left: 1px solid #717171;
+	border-left: 1px solid @gray1;
 	border-top: none;
 }
 .tb-megamenu .nav > li:hover .dropdown-menu{
@@ -1099,7 +1094,7 @@ footer .region-footer:before {
 }
 
 .tb-megamenu .nav > li:last-child {
-	border-right: 1px solid #717171;
+	border-right: 1px solid @gray1;
 }
 .tb-megamenu .nav > li > a {
 	border-right: none;
@@ -1262,4 +1257,24 @@ input.form-control {
 	margin-left:20px;
 	position:relative;
 	top:10px	
+}
+
+
+
+
+.breadcrumb {
+	margin-bottom: 0;
+	background-color: @gray2;
+	position: relative;
+	&:before {
+		content: "";
+		display: block;
+		background-color:  @gray2 ;
+		top:0;
+		left: -100%;
+		right: -100%;
+		height: 100%;
+		position: absolute;
+		z-index:-1;
+	}
 }
