--- a/footer.less
+++ b/footer.less
@@ -1,127 +1,129 @@
+
 /* Footer */
 .footer {
 	padding-top: 0;
 	margin-top: 0;
 	margin-bottom: 0;
 	padding-bottom: 0;
-	/* position: relative; */
-}
-.footer .region-footer {
-	background-color: @gray3;
-	position: relative;
-	&:before {
-	  content: "";
-	  display: block;
-	  background-color: @gray3;
-	  left: -100%;
-	  right: -100%;
-	  height: 100%;
-	  position: absolute;
-	  z-index: -1;
+	
+
+	.region-footer {
+		background-color: @gray3;
+		position: relative;
+		&:before {
+		  content: "";
+		  display: block;
+		  background-color: @gray3;
+		  left: -100%;
+		  right: -100%;
+		  height: 100%;
+		  position: absolute;
+		  z-index: -1;
+		}
 	}
-}
 
-.footer .region-footer .block-title {
-	text-align: center;
-	font-size: 20px;
-	border-bottom: 1px solid @gray1;
-	padding-top: 25px;
-	padding-bottom: 25px;
-}
-
-.footer .region-footer .panel-display {
-	padding-bottom: 20px;
-}
-.footer .region-footer .pane-title {
-	color: #fff;
-	font-size: 20px;
-	margin-bottom: 34px;
-}
-.footer .region-footer .panel-col {
-	margin-left: 30px;
-}
-.footer .region-footer .pane-views,
-.footer .region-footer .pane-block,
-.footer .region-footer .pane-panels-mini {
-	float: left;
-	width: 285px;
-}
-.footer .region-footer a {
-	color: #fff;
-	text-decoration: none;
-	font-size: 12px;
-	font-weight: bold;
-	display: inline-block;
-	margin-bottom: 12px;
-}
-.footer .region-footer a:hover {
-	color: @magenta;
-}
-.footer .region-footer .pane-panels-mini .pane-menu-menu-help-support {
-	width: 230px;
-}
-.footer .region-footer .pane-panels-mini .nav a {
-	color: #fff;
-	text-decoration: none;
-	background: none;
-	font-size: 12px;
-	font-weight: bold;
-	display: inline-block;
-	margin-bottom: 12px;
-}
-.footer .region-footer .pane-panels-mini .nav a:hover {
-	color: @magenta;
-}
-.footer .region-footer .views-label-title-1 {
-	display: none;
-}
-.footer .region-footer .pane-content {
-	max-width: 230px;
-}
-.footer .region-footer .panel-pane a {
-	padding: 0;
-}
-.footer .region-footer #block-block-2 {
-	color: #fff;
-	background-color: #000;
-	font-size: 12px;
-	padding-left: 30px;
-	padding-right: 30px;
-	padding-top: 21px;
-	position:relative;
-		&:before{
-	  content: "";
-	  display: block;
-	  background-color: #000;
-	  top:0;
-	  left: -100%;
-	  right: -100%;
-	  height: 100%;
-	  position: absolute;
-	  z-index:-1;
+	.region-footer .block-title {
+		text-align: center;
+		font-size: 20px;
+		border-bottom: 1px solid @gray1;
+		padding-top: 25px;
+		padding-bottom: 25px;
 	}
-}
 
-.footer-bottom-company-name {
-	float: left;
-	font-size: 12px;
-	font-weight: bold;
-}
-.footer-bottom-links-wrapper {
-	float: right;
-}
-.footer-bottom-links li {
-	display: inline-block;
-	list-style: none;
-}
-.footer-bottom-links li a {
-	font-weight: bold;
-	color: #fff;
-	text-decoration: none;
-	padding-right: 13px;
-	padding-left: 13px;
-}
-.footer-bottom-links li:last-child a {
-	border-right: none;
-	padding-right: 0;
+	.region-footer .panel-display {
+		padding-bottom: 20px;
+		.make-row();
+	}
+	.region-footer .pane-title {
+		color: #fff;
+		font-size: 20px;
+		margin-bottom: 34px;
+	}
+	.region-footer .panel-col {
+		margin-left: 30px;
+	}
+	.region-footer .pane-views,
+	.region-footer .pane-block,
+	.region-footer .pane-panels-mini {
+		.make-sm-column(4);
+	}
+	.region-footer a {
+		color: #fff;
+		text-decoration: none;
+		font-size: 12px;
+		font-weight: bold;
+		display: inline-block;
+		margin-bottom: 12px;
+	}
+	.region-footer a:hover {
+		color: @magenta;
+	}
+	.region-footer .pane-panels-mini .pane-menu-menu-help-support {
+		width: 230px;
+	}
+	.region-footer .pane-panels-mini .nav a {
+		color: #fff;
+		text-decoration: none;
+		background: none;
+		font-size: 12px;
+		font-weight: bold;
+		display: inline-block;
+		margin-bottom: 12px;
+	}
+	.region-footer .pane-panels-mini .nav a:hover {
+		color: @magenta;
+	}
+	.region-footer .views-label-title-1 {
+		display: none;
+	}
+	.region-footer .pane-content {
+		max-width: 230px;
+	}
+	.region-footer .panel-pane a {
+		padding: 0;
+	}
+	.region-footer #block-block-2 {
+		color: #fff;
+		background-color: #000;
+		font-size: 12px;
+		padding-left: 30px;
+		padding-right: 30px;
+		padding-top: 21px;
+		position:relative;
+			&:before{
+		  content: "";
+		  display: block;
+		  background-color: #000;
+		  top:0;
+		  left: -100%;
+		  right: -100%;
+		  height: 100%;
+		  position: absolute;
+		  z-index:-1;
+		}
+	}
+
+	.footer-bottom-company-name {
+		float: left;
+		font-size: 12px;
+		font-weight: bold;
+	}
+	.footer-bottom-links-wrapper {
+		float: right;
+	}
+	.footer-bottom-links li {
+		display: inline-block;
+		list-style: none;
+	}
+	.footer-bottom-links li a {
+		font-weight: bold;
+		color: #fff;
+		text-decoration: none;
+		padding-right: 13px;
+		padding-left: 13px;
+	}
+	.footer-bottom-links li:last-child a {
+		border-right: none;
+		padding-right: 0;
+	}
 }
