--- a/node-article.less
+++ b/node-article.less
@@ -1,158 +1,176 @@
 /* Article */
-.node-type-article .center-wrapper {
-	display: table;
-}
-.node-type-article .panel-2col-bricks > .center-wrapper > .panel-col-first {
-	width: 100%;
-}
-.node-type-article .panel-col-top {
-	background-color: @magenta;
-	margin-bottom: 0;
-	padding-top: 34px;
-}
-.node-type-article .panel-col-top:before {
-	background-color: rgba(193, 11, 76, 1);
-}
-.node-type-article .panel-col-top .pane-node-title {
-	font-size: 47px;
-}
+.node-type-article {
+	#mini-panel-article_bottom {
+		padding-top: 30px;
+		.make-row();
+		position: relative;
+		.clearfix();
 
-.node-type-article .panel-col-top .pane-node-field-release-date span {
-	background: url('../images/release-white-icon.png') no-repeat;
-	padding-left: 20px;
-}
-.node-type-article .panel-col-top .pane-node-field-version-number {
-	margin: 0 auto;
-	width: 139px;
-}
+		.panel-col-last {
+			// width: 330px;
+			.make-sm-column(3);
+			.make-sm-column-offset(1);
+			height: 100%;
+			position: absolute;
+			top: 0;
+			right: 0;
+			background-color: @gray2;
+		}
 
-.node-type-article .pane-audience .panel-col-last {
-	width: 50%;
-}
+		.panel-col-first {
+			.make-sm-column(7);
+			.make-sm-column-offset(1);
+			// width: 620px;
+			// margin-right: 85px;
+			// padding-bottom: 40px;
+			// padding-top: 90px;
+		}
+	}
 
-.node-type-article .pane-audience {
-	margin-left: 105px;
-	margin-right: 105px;
-	margin-bottom: 30px;
-	margin-top: 10px;
-}
-.node-type-article .pane-audience .views-row {
-	padding-left: 0;
-	padding-bottom: 0;
-	padding-right: 0;
-}
-.node-type-article .pane-audience .views-row:hover{
-	background-color:@gray2;
-}
-.node-type-article .panel-col-top .pane-node-title a {
-	color: #fff;
-	text-decoration: none;
-	display: inline-block;
-	width: 700px;
-}
-.node-type-article .pane-primary-audience h2,
-.node-type-article .pane-secondary-audience h2{
-	margin-bottom: 0;
-	font-size: 40px;
-	height: 101px;
-	width: 446px;
-	padding-left: 120px;
-	text-transform: inherit;
-	margin-bottom: 50px;
-}
-.node-type-article .pane-primary-audience h2 {
-	background: url('../images/primary-audience-icon.png') no-repeat;
-}
-.node-type-article .pane-secondary-audience h2 {
-	background: url('../images/secondary-audience-icon.png') no-repeat;
-}
-.node-type-article .pane-audience .view-content {
-	border-top: 5px solid #000;
-	margin-right: 20px;
-	padding-top: 42px;
-	padding-bottom: 8px;
-}
+	.panel-2col-bricks > .center-wrapper > .panel-col-first {
+		width: 100%;
+	}
+	.panel-col-top {
+		background-color: @magenta;
+		margin-bottom: 0;
+		padding-top: 34px;
+	}
+	.panel-col-top:before {
+		background-color: rgba(193, 11, 76, 1);
+	}
+	.panel-col-top .pane-node-title {
+		font-size: 47px;
+	}
+
+	.panel-col-top .pane-node-field-release-date span {
+		background: url('../images/release-white-icon.png') no-repeat;
+		padding-left: 20px;
+	}
+	.panel-col-top .pane-node-field-version-number {
+		margin: 0 auto;
+		width: 139px;
+	}
+
+	.pane-audience .panel-col-last {
+		width: 50%;
+	}
+
+	.pane-audience {
+		margin-left: 105px;
+		margin-right: 105px;
+		margin-bottom: 30px;
+		margin-top: 10px;
+	}
+	.pane-audience .views-row {
+		padding-left: 0;
+		padding-bottom: 0;
+		padding-right: 0;
+	}
+	.pane-audience .views-row:hover{
+		background-color:@gray2;
+	}
+	.panel-col-top .pane-node-title a {
+		color: #fff;
+		text-decoration: none;
+		display: inline-block;
+		width: 700px;
+	}
+	.pane-primary-audience h2,
+	.pane-secondary-audience h2{
+		margin-bottom: 0;
+		font-size: 40px;
+		height: 101px;
+		width: 446px;
+		padding-left: 120px;
+		text-transform: inherit;
+		margin-bottom: 50px;
+	}
+	.pane-primary-audience h2 {
+		background: url('../images/primary-audience-icon.png') no-repeat;
+	}
+	.pane-secondary-audience h2 {
+		background: url('../images/secondary-audience-icon.png') no-repeat;
+	}
+	.pane-audience .view-content {
+		border-top: 5px solid #000;
+		margin-right: 20px;
+		padding-top: 42px;
+		padding-bottom: 8px;
+	}
 
 
-/*.node-type-article .panel-2col-bricks > .center-wrapper > .panel-col-first .panel-col-first .views-row.views-row-odd,
-.node-type-article .panel-2col-bricks > .center-wrapper > .panel-col-first .panel-col-last .views-row.views-row-odd {
-	width: inherit;
-}*/
-.node-type-article .panel-col-middle .pane-article-section-titles {
-	background-color: @brown1;
-	text-align: center;
-	color: #fff;
-	padding-top: 26px;
-	padding-bottom: 9px;
-	position:relative;
-}
-.node-type-article .panel-col-middle .pane-article-section-titles:before {
-	content: "";
-	display: block;
-	background-color: @brown1;
-	top:0;
-	left: -100%;
-	right: -100%;
-	height: 100%;
-	position: absolute;
-	z-index:-1;
-}
-.node-type-article .panel-col-middle .item-list ul li {
-	list-style: none;
-}
-.node-type-article .panel-col-middle table {
-	margin: 45px auto 0 auto;
-	width: 1000px;
-	text-align: left;
-}
-.node-type-article .panel-col-middle table td {
-	padding-bottom: 41px;
-}
-.node-type-article .panel-col-middle table td > .views-field a { 
-	color: #fff;
-	text-decoration: none;
-	border-bottom: 1px solid #bab8b7;
-	display: inline-block;
-	padding-bottom: 20px;
-	font-size: 16px;
-	font-weight: bold;
-	width: 390px;
-}
+	/*.panel-2col-bricks > .center-wrapper > .panel-col-first .panel-col-first .views-row.views-row-odd,
+	.panel-2col-bricks > .center-wrapper > .panel-col-first .panel-col-last .views-row.views-row-odd {
+		width: inherit;
+	}*/
+	.panel-col-middle .pane-article-section-titles {
+		background-color: @brown1;
+		text-align: center;
+		color: #fff;
+		padding-top: 26px;
+		padding-bottom: 9px;
+		position:relative;
+	}
+	.panel-col-middle .pane-article-section-titles:before {
+		content: "";
+		display: block;
+		background-color: @brown1;
+		top:0;
+		left: -100%;
+		right: -100%;
+		height: 100%;
+		position: absolute;
+		z-index:-1;
+	}
+	.panel-col-middle .item-list ul li {
+		list-style: none;
+	}
+	.panel-col-middle table {
+		margin: 45px auto 0 auto;
+		width: 1000px;
+		text-align: left;
+	}
+	.panel-col-middle table td {
+		padding-bottom: 41px;
+	}
+	.panel-col-middle table td > .views-field a { 
+		color: #fff;
+		text-decoration: none;
+		border-bottom: 1px solid #bab8b7;
+		display: inline-block;
+		padding-bottom: 20px;
+		font-size: 16px;
+		font-weight: bold;
+		width: 390px;
+	}
 
-.node-type-article #mini-panel-article_bottom {
-	margin-left: 105px;
-	position: relative;
-	overflow: inherit;
-}
+	.panel-col-first .views-row {
+		border-top: 5px solid #000;
+		padding-top: 0px;
+		padding-bottom: 40px;
+	}
 
-.node-type-article #mini-panel-article_bottom .panel-col-last {
-	width: 330px;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	right: 0;
-	background-color: @gray2;
-}
+	.panel-col-first .views-row:last-child {
+		border-bottom: 5px solid #000;
+	}
 
-.node-type-article #mini-panel-article_bottom .panel-col-first {
-	width: 620px;
-	margin-right: 85px;
-	padding-bottom: 40px;
-	padding-top: 90px;
-}
+	.panel-col-first .views-row h2 {
+		font-size: 50px;
+	  padding-left: 80px;	
+	  margin-top: 0;
+	}
+	.article-heading-wrapper {
+		.clearfix();
+		padding:20px 0;
+		position: relative;
+		border-bottom: 1px solid @gray2;
+		margin-bottom: 20px;
+	}
+	.section-number {
+		font-size: 80px;
+		top: 0;
+		left: 0;
+		position: absolute;
+	}
 
-.node-type-article #mini-panel-article_bottom .panel-col-first .views-row {
-	border-top: 5px solid #000;
-	padding-top: 39px;
-	padding-bottom: 41px;
-}
-
-.node-type-article #mini-panel-article_bottom .panel-col-first .views-row:last-child {
-	border-bottom: 5px solid #000;
-}
-
-.node-type-article #mini-panel-article_bottom .panel-col-first .views-row h2 {
-	margin-top: 0;
-	display: inline-block;
-	width: 505px;
 }
