--- a/node-persona.less
+++ b/node-persona.less
@@ -2,6 +2,7 @@
 .node-type-persona {
 
 	.center-wrapper {
+		padding-top: 30px;
 		.make-row();
 		position: relative;
 		.clearfix();
@@ -15,13 +16,23 @@
 		.make-sm-column-offset(1);
 	}
 
+	.center-wrapper .panel-col-last{
+		// width: 330px;
+		.make-sm-column(3);
+		.make-sm-column-offset(1);
+		height: 100%;
+		position: absolute;
+		top: 0;
+		right: 0;
+		background-color: @gray2;
+	}
 	.panel-col-first .views-row:first-child {
 		border-top: 5px solid #000;
 		padding-top: 30px;
 	}
 
 	.panel-col-first .views-row {
-		border-bottom: 1px solid #000;
+		border-bottom: 1px solid @gray2;
 		padding-bottom: 40px;
 		margin-bottom: 0px;
 		padding: 30px 10px;
@@ -42,14 +53,5 @@
 		margin-bottom: 20px;
 	}
 
-	.center-wrapper .panel-col-last{
-		// width: 330px;
-		.make-sm-column(4);
-		height: 100%;
-		position: absolute;
-		top: 0;
-		right: 0;
-		background-color: @gray2;
-	}
 } 
 
