--- a/footer.less
+++ b/footer.less
@@ -20,88 +20,94 @@
 		  position: absolute;
 		  z-index: -1;
 		}
-	}
 
-	.region-footer .block-title {
-		text-align: center;
-		font-size: 20px;
-		border-bottom: 1px solid @gray1;
-		padding-top: 25px;
-		padding-bottom: 25px;
-	}
+		.block-title {
+				text-align: center;
+				font-size: 20px;
+				border-bottom: 1px solid @gray1;
+				padding-top: 25px;
+				padding-bottom: 25px;
+		}
+		.panel-display {
+				padding-bottom: 20px;
+				.make-row();
+		}
 
-	.region-footer .panel-display {
-		padding-bottom: 20px;
-		.make-row();
-	}
-	.region-footer .pane-title {
-		color: #fff;
-		font-size: 20px;
-		margin-bottom: 34px;
-	}
-	.region-footer .panel-col {
-		margin-left: 30px;
-	}
-	.region-footer .pane-views,
-	.region-footer .pane-block,
-	.region-footer .pane-panels-mini {
-		.make-sm-column(4);
-	}
-	.region-footer a {
-		color: #fff;
-		text-decoration: none;
-		font-size: 12px;
-		font-weight: bold;
-		display: inline-block;
-		margin-bottom: 12px;
-	}
-	.region-footer a:hover {
-		color: @magenta;
-	}
-	.region-footer .pane-panels-mini .pane-menu-menu-help-support {
-		width: 230px;
-	}
-	.region-footer .pane-panels-mini .nav a {
-		color: #fff;
-		text-decoration: none;
-		background: none;
-		font-size: 12px;
-		font-weight: bold;
-		display: inline-block;
-		margin-bottom: 12px;
-	}
-	.region-footer .pane-panels-mini .nav a:hover {
-		color: @magenta;
-	}
-	.region-footer .views-label-title-1 {
-		display: none;
-	}
-	.region-footer .pane-content {
-		max-width: 230px;
-	}
-	.region-footer .panel-pane a {
-		padding: 0;
-	}
-	.region-footer #block-block-2 {
-		color: #fff;
-		background-color: #000;
-		font-size: 12px;
-		padding-left: 30px;
-		padding-right: 30px;
-		padding-top: 21px;
-		position:relative;
-			&:before{
-		  content: "";
-		  display: block;
-		  background-color: #000;
-		  top:0;
-		  left: -100%;
-		  right: -100%;
-		  height: 100%;
-		  position: absolute;
-		  z-index:-1;
+		.pane-title {
+				color: #fff;
+				font-size: 20px;
+				margin-bottom: 34px;
+		}
+		.panel-col {
+			margin-left: 30px;
+		}
+		.pane-views,
+		.pane-block,
+		.pane-panels-mini {
+			.make-xs-column(6);
+			.make-sm-column(3);
+		}
+		a {
+			color: #fff;
+			text-decoration: none;
+			font-size: 12px;
+			font-weight: bold;
+			display: inline-block;
+			margin-bottom: 12px;
+		}
+		a:hover {
+			text-decoration: underline;
+		}
+		.pane-panels-mini .pane-menu-menu-help-support {
+			width: 230px;
+		}
+		.pane-panels-mini .nav a {
+			color: #fff;
+			text-decoration: none;
+			background: none;
+			font-size: 12px;
+			font-weight: bold;
+			display: inline-block;
+			margin-bottom: 12px;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+		.views-label-title-1 {
+			display: none;
+		}
+		.pane-content {
+			max-width: 230px;
+		}
+		.panel-pane a {
+			padding: 0;
+		}
+		#block-block-2 {
+			color: #fff;
+			background-color: #000;
+			font-size: 12px;
+			padding-left: 30px;
+			padding-right: 30px;
+			padding-top: 21px;
+			position:relative;
+				&:before{
+			  content: "";
+			  display: block;
+			  background-color: #000;
+			  top:0;
+			  left: -100%;
+			  right: -100%;
+			  height: 100%;
+			  position: absolute;
+			  z-index:-1;
+			}
 		}
 	}
+
+	
+
+	
+	
 
 	.footer-bottom-company-name {
 		float: left;
