--- a/style.less
+++ b/style.less
@@ -267,19 +267,20 @@ p img {
 .main-container #page-header {
 	background-color: @gray3;
 	position: relative;
+	&:before{
+	  content: "";
+	  display: block;
+	  background-color: rgba(51, 51, 51, 1);
+	  top:0;
+	  left: -100%;
+	  right: -100%;
+	  height: 100%;
+	  position: absolute;
+	  z-index:-1;
+	}
 }
 
-.main-container #page-header:before{
-  content: "";
-  display: block;
-  background-color: rgba(51, 51, 51, 1);
-  top:0;
-  left: -100%;
-  right: -100%;
-  height: 100%;
-  position: absolute;
-  z-index:-1;
-}
+.main-container #page-header
 
 
 section#block-search-form {
@@ -426,6 +427,7 @@ form #edit-search-block-form--2:-ms-input-placeholder {
 @import 'glossary';
 @import 'footer';
 @import 'megamenu';
+@import 'home';
 @import 'welcome';
 @import 'login';
 
