refactoring to use the new colors

--- a/custom_variables.less
+++ b/custom_variables.less
@@ -1,5 +1,12 @@
-@magenta : #C10B4C;
-@gray1   : #717171;
-@gray2   : #f4f2f0;
-@gray3   : #333333;
-@brown1  : #857763;
+@gold     : #857763;
+@red      : #C10B4C;
+
+@white    : #FFFFFF;
+@offWhite : #f4f2f0;
+
+@grey     : #333333;
+@darkGrey : #1d1d1d;
+@black    : #000000;
+
+
+@gray1    : #717171;
