--- a/glossary.less
+++ b/glossary.less
@@ -25,7 +25,7 @@
 }
 
 .views-glossary-module .attachment .view-content {
-	background-color: @magenta;
+	background-color: @red;
 	padding-left: 11px;
 	padding-right: 11px;
 }
