--- a/help-and-support.less
+++ b/help-and-support.less
@@ -11,7 +11,7 @@
 	margin-right: 105px;
 }
 .node-type-webform .help-support-block h2 {
-	color: @gray3;
+	color: @grey;
 	font-size: 47px;
 }
 .node-type-webform .help-support-block #edit-submitted-first-name {
