--- a/node-article.less
+++ b/node-article.less
@@ -14,7 +14,7 @@
 			position: absolute;
 			top: 0;
 			right: 0;
-			background-color: @gray2;
+			background-color: @offWhite;
 		}
 
 		.panel-col-first {
@@ -31,7 +31,7 @@
 		width: 100%;
 	}
 	.panel-col-top {
-		background-color: @magenta;
+		background-color: @red;
 		margin-bottom: 0;
 		padding-top: 34px;
 	}
@@ -67,7 +67,7 @@
 		padding-right: 0;
 	}
 	.pane-audience .views-row:hover{
-		background-color:@gray2;
+		background-color:@offWhite;
 	}
 	.panel-col-top .pane-node-title a {
 		color: #fff;
@@ -104,7 +104,7 @@
 		width: inherit;
 	}*/
 	.panel-col-middle .pane-article-section-titles {
-		background-color: @brown1;
+		background-color: @gold;
 		text-align: center;
 		color: #fff;
 		padding-top: 26px;
@@ -114,7 +114,7 @@
 	.panel-col-middle .pane-article-section-titles:before {
 		content: "";
 		display: block;
-		background-color: @brown1;
+		background-color: @gold;
 		top:0;
 		left: -100%;
 		right: -100%;
@@ -163,7 +163,7 @@
 		.clearfix();
 		padding:20px 0;
 		position: relative;
-		border-bottom: 1px solid @gray2;
+		border-bottom: 1px solid @offWhite;
 		margin-bottom: 20px;
 	}
 	.section-number {
