--- a/node-combo-article.less
+++ b/node-combo-article.less
@@ -26,16 +26,16 @@
 		position: absolute;
 		top: 0;
 		right: 0;
-		background-color: @gray2;
+		background-color: @offWhite;
 	}
 	.panel-col-top {
-		background-color: @magenta;
+		background-color: @red;
 	}
 	.panel-col-top:before {
-		background-color: @magenta;
+		background-color: @red;
 	}
 	.pane-combo-page-articles {
-		border-top: 5px solid @gray3;
+		border-top: 5px solid @grey;
 	}
 	.panel-col-top .field-item a {
 		color: #000;
@@ -46,8 +46,8 @@
 	}
 	.panel-col-first h3 {
 		font-size: 47px;
-		color: @gray3;
-		border-bottom: 5px solid @gray3;
+		color: @grey;
+		border-bottom: 5px solid @grey;
 		padding-top: 15px;
 		padding-bottom: 34px;
 	}
@@ -63,7 +63,7 @@
 		font-size: 47px;
 	}
 	.panel-col-first .article-parent-class .article-specification-class {
-		color: @magenta;
+		color: @red;
 		font-weight: bold;
 	}
 	.panel-col-first .article-parent-class .article-date-class {
@@ -80,17 +80,17 @@
 	.panel-col-first .views-row {
 		padding-top: 0;
 		padding-bottom: 10px;
-		border-bottom: 1px solid @gray2;
+		border-bottom: 1px solid @offWhite;
 		padding:5px 10px;
 	} 
 	.panel-col-first .views-row:hover {
-		background-color:@gray2;
+		background-color:@offWhite;
 	}
 	.panel-col-first .views-row a {
 		text-decoration:none;
 	}
 	.panel-col-first .views-row a:hover {
-		color:@gray3;
+		color:@grey;
 	}
 	.footer {
 		margin-top: 0;
