--- a/node-persona.less
+++ b/node-persona.less
@@ -1,56 +1,34 @@
 /* brand manager */
 .node-type-persona {
 
-	.center-wrapper {
-		padding-top: 30px;
-		.make-row();
-		position: relative;
-		.clearfix();
-	}
+	.two-col-custom-right {
 
-	.panel-col-first {
-		// margin-left: 105px;
-		// margin-right: 100px;
-		// width: 620px;
-		.make-sm-column(7);
-		.make-sm-column-offset(1);
-	}
+		.views-row:first-child {
+			border-top: 5px solid #000;
+			padding-top: 30px;
+		}
 
-	.center-wrapper .panel-col-last{
-		// width: 330px;
-		.make-sm-column(3);
-		.make-sm-column-offset(1);
-		height: 100%;
-		position: absolute;
-		top: 0;
-		right: 0;
-		background-color: @gray2;
-	}
-	.panel-col-first .views-row:first-child {
-		border-top: 5px solid #000;
-		padding-top: 30px;
-	}
+		.views-row {
+			border-bottom: 1px solid @offWhite;
+			padding-bottom: 40px;
+			margin-bottom: 0px;
+			padding: 30px 10px;
+		}
+		.views-row:hover {
+			background-color:@offWhite;
+		}
+		.views-row:last-child {
+			border-bottom: none;
+		}
+		.views-field-title-1 a {
+			line-height: 45px;
+			display: block;
+			margin-bottom: 30px;
+		}
 
-	.panel-col-first .views-row {
-		border-bottom: 1px solid @gray2;
-		padding-bottom: 40px;
-		margin-bottom: 0px;
-		padding: 30px 10px;
-	}
-	.panel-col-first .views-row:hover {
-		background-color:@gray2;
-	}
-	.panel-col-first .views-row:last-child {
-		border-bottom: none;
-	}
-	.panel-col-first .views-field-title-1 a {
-		line-height: 45px;
-		display: block;
-		margin-bottom: 30px;
-	}
-
-	.panel-col-first .field-content {
-		margin-bottom: 20px;
+		.field-content {
+			margin-bottom: 20px;
+		}
 	}
 
 } 
