--- a/footer.less
+++ b/footer.less
@@ -8,12 +8,12 @@
 	
 
 	.region-footer {
-		background-color: @gray3;
+		background-color: @grey;
 		position: relative;
 		&:before {
 		  content: "";
 		  display: block;
-		  background-color: @gray3;
+		  background-color: @grey;
 		  left: -100%;
 		  right: -100%;
 		  height: 100%;
