--- a/home.less
+++ b/home.less
@@ -49,7 +49,7 @@
 	}
 	.pane-homepage-reference-articles .pane-title {
 		text-align: center;
-		color: @magenta;
+		color: @red;
 		margin-top: 0;
 		margin-bottom: 38px;
 	}
@@ -68,16 +68,16 @@
 		padding:0 15px;
 	}
 	.references-list ul li:hover {
-		background-color:@gray2;
+		background-color:@offWhite;
 	}
 	.references-list ul li .views-field-field-document-type {
 		font-weight: bold;
-		color: @magenta;
+		color: @red;
 		padding-top: 42px;
 	}
 	.references-list ul li .views-field-title a {
 		font-size: 40px;
-		color: @gray3;
+		color: @grey;
 		text-decoration: none;
 	}
 	
