--- a/login.less
+++ b/login.less
@@ -5,7 +5,7 @@
 .page-user-password .main-container{
 	margin-bottom:50px;
 	margin-top:50px;
-	background-color:@gray2 ;
+	background-color:@offWhite ;
 	padding:50px 0;
 	position:relative;
 }
@@ -19,7 +19,7 @@
 .page-user-password .main-container:before{
 	content: "";
 	display: block;
-	background-color: @gray2;
+	background-color: @offWhite;
 	top:0;
 	left: -100%;
 	right: -100%;
