--- a/megamenu.less
+++ b/megamenu.less
@@ -18,11 +18,11 @@
 	width: 612px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: @gray3;
+	background-color: @grey;
 }
 .tb-megamenu .dropdown-menu {
 	border-bottom-color: transparent;
-	background-color: @gray3;
+	background-color: @grey;
 }
 .tb-megamenu .nav > li > a {
 	font-weight: bold;
@@ -78,25 +78,25 @@
 	border-top: 5px solid transparent;
 }
 .tb-megamenu .nav > li > a:hover {
-	background-color: @gray3;
+	background-color: @grey;
 }
 .tb-megamenu .nav li.dropdown > .dropdown-toggle {
 	border-top: 5px solid transparent;
 }
 .tb-megamenu .nav li.dropdown.active > .dropdown-toggle {
 	border-right: none;
-	background-color: @gray3;
+	background-color: @grey;
 	border-top: 5px solid #fff;
 }
 .tb-megamenu .nav > li > a:focus, 
 .tb-megamenu .nav > li > a:hover {
 	color: #fff;
-	background-color: @gray3;
+	background-color: @grey;
 }
 
 .tb-megamenu .nav > .active > a, 
 .tb-megamenu .nav > .active > a:hover {
-	background-color: @gray3;
+	background-color: @grey;
 	border-top: 5px solid #fff;
 }
 .mega-inner .views-field {
