--- a/welcome.less
+++ b/welcome.less
@@ -4,14 +4,14 @@
 		text-align:center;
 		margin-bottom:50px;
 		margin-top:50px;
-		background-color:@gray2 ;
+		background-color:@offWhite ;
 		padding:50px 0;
 		position:relative;
 	}
 	.main-container:before{
 		  content: "";
 	  display: block;
-	  background-color: @gray2;
+	  background-color: @offWhite;
 	  top:0;
 	  left: -100%;
 	  right: -100%;
