--- a/home.less
+++ b/home.less
@@ -1,84 +1,36 @@
 .page-home {
-	.panel-col-top {
-		background-color: rgba(193, 11, 76, 1);
-		padding-top: 12px;
-		padding-bottom: 12px;
-	}
-	.panel-col-top:before {
-		background-color: rgba(193, 11, 76, 1);
-	}
-	.panel-col-top .views-field-title {
-		font-size: 20px;
-		line-height: 1;
-		padding-top: 20px;
-		padding-bottom: 20px;
-	}
-	.panel-col-top .views-field-title a {
-		color: #fff;
-		text-decoration: none;
-	}
-	.panel-col-top .views-field-field-homepage-summary {
-		color: #fff;
-		min-height: 65px;
-	}
-	.panel-col-top .view-homepage-roles {
+	.homepage-hero {
 		text-align: center;
-	}
-	.panel-col-top .view-homepage-roles .view-content {
-		padding-top: 40px;
-		padding-bottom: 40px;
-	}
-	.panel-col-top .view-homepage-roles .view-content table {
-		margin-right: auto;
-		margin-left: auto;
-	}
-	.panel-col-top .view-homepage-roles .view-content td {
-		padding-left: 25px;
-		padding-right: 25px;
-		width: 300px;
-	}
-	.panel-col-bottom {
-		margin-top: 40px;
-		margin-bottom: 40px;
-	}
+		background-color:  @red ;
+		color: @white;
+		position: relative;
+		padding: 35px 0;
+		&:before {
+			content: "";
+			display: block;
+			background-color:  @red ;
+			top:0;
+			left: -100%;
+			right: -100%;
+			height: 100%;
+			position: absolute;
+			z-index:-1;
+		}
+		h2 {
+			margin-bottom: 40px;
+		}
+		.views-field-title {
+			a {
+				color: @white;
+				font-size: @font-size-h3;
+				margin-top: 20px;
+				display: block;
+			}
+		}
+		.views-field-field-homepage-summary {
+			padding: 20px;
 
-	/* Reference section (homepage) */
-	.pane-homepage-reference-articles {
-		display: table;
-		padding: 0 105px 0;
-	}
-	.pane-homepage-reference-articles .pane-title {
-		text-align: center;
-		color: @red;
-		margin-top: 0;
-		margin-bottom: 38px;
-	}
-	.references-list ul {
-		display: table;
-		margin: 0;
-		padding: 0;
-	}
-	.references-list ul li {
-		list-style-type: none;
-		border-top: 5px solid #000;
-		width: 444px;
-		float: left;
-		margin-right: 20px;
-		min-height: 202px;
-		padding:0 15px;
-	}
-	.references-list ul li:hover {
-		background-color:@offWhite;
-	}
-	.references-list ul li .views-field-field-document-type {
-		font-weight: bold;
-		color: @red;
-		padding-top: 42px;
-	}
-	.references-list ul li .views-field-title a {
-		font-size: 40px;
-		color: @grey;
-		text-decoration: none;
+		}
 	}
 	
 }
