progress on footer and header

--- a/footer.less
+++ b/footer.less
@@ -20,12 +20,16 @@
 		  position: absolute;
 		  z-index: -1;
 		}
+		.panel-pane {
+			margin: 40px 0;
+		}
 		h2 {
 			font-size: @font-size-h4;
 			text-align: left;
 			color: @white;
 			margin-bottom: 20px;
 			font-weight: normal;
+			
 		}
 		a {
 			color: #fff;
