--- a/style.less
+++ b/style.less
@@ -161,6 +161,22 @@ header {
 			}
 		}
 	}
+	.top-search {
+		margin-top: 20px;
+		float: right;
+		width: 40%;
+		.input-group {
+
+			width: 100%;
+			input {
+				padding: 10px;
+				font-size: 10px;
+			}
+		}
+		.input-group-btn {
+			display: none;
+		}
+	}
 }
 
 
