--- a/node-persona.less
+++ b/node-persona.less
@@ -1,6 +1,13 @@
 /* brand manager */
 .node-type-persona {
-
+	.two-col-custom {
+		.two-col-custom-top {
+			background-color:  @gold ;
+			&:before {
+				background-color:  @gold ;
+			}
+		}
+	}
 
 
 } 
