--- a/style.less
+++ b/style.less
@@ -62,7 +62,7 @@ a {
 	&:before{
 	  content: "";
 	  display: block;
-	  background-color: rgba(51, 51, 51, 1);
+	  background-color: @grey;
 	  top:0;
 	  left: -100%;
 	  right: -100%;
@@ -73,22 +73,29 @@ a {
 }
 
 .two-col-custom {
-
 	.two-col-custom-top {
 		text-align: center;
-		background-color:  @gold ;
+		background-color:  @red ;
 		color: @white;
 		position: relative;
+		margin-bottom: 40px;
 		&:before {
 			content: "";
 			display: block;
-			background-color:  @gold ;
+			background-color:  @red ;
 			top:0;
 			left: -100%;
 			right: -100%;
 			height: 100%;
 			position: absolute;
 			z-index:-1;
+		}
+		.inside {
+			padding:30px 0;
+		}
+		.pane-1 p {
+			.h2();
+
 		}
 	}
 
@@ -133,7 +140,7 @@ a {
 	}
 }
 
-header {
+.top-header {
 	margin-top: 20px;
 	margin-bottom: 40px;
 	.logo {
