--- a/login.less
+++ b/login.less
@@ -4,7 +4,6 @@
 .page-user-login .main-container,
 .page-user-password .main-container{
 	margin-bottom:50px;
-	margin-top:50px;
 	background-color:@offWhite ;
 	padding:50px 0;
 	position:relative;
@@ -12,7 +11,7 @@
 .page-user-login .main-container h1,
 .page-user-password .main-container{
 	text-align:center;
-	margin-bottom:40px;
+	margin-bottom: 10px;
 }
 
 .page-user-login .main-container:before,
@@ -28,8 +27,8 @@
 	z-index:-1;
 }
 .page-user-login .main-container .btn-primary,
-.page-user-password .main-container .btn-primary {
-	padding: 12px 25px;
+.page-user-password .main-container .btn-primary { 
+	padding: 15px 70px;
 	display:inline-block;
 	margin-top:20px;
 	text-transform:uppercase;
@@ -59,5 +58,6 @@ input.form-control {
 	display:inline-block;
 	margin-left:20px;
 	position:relative;
-	top:10px	
+	top:10px;
+	text-decoration: underline;	
 }
