--- a/footer.less
+++ b/footer.less
@@ -1,95 +1,84 @@
-
 /* Footer */
+
 .footer {
-	padding-top: 0;
-	margin-top: 0;
-	margin-bottom: 0;
-	padding-bottom: 0;
-	
-
-	.region-footer {
-		background-color: @grey;
-		position: relative;
-		&:before {
-		  content: "";
-		  display: block;
-		  background-color: @grey;
-		  left: -100%;
-		  right: -100%;
-		  height: 100%;
-		  position: absolute;
-		  z-index: -1;
-		}
-		.panel-pane {
-			margin: 40px 0;
-		}
-		h2 {
-			font-size: @font-size-h4;
-			text-align: left;
-			color: @white;
-			margin-bottom: 20px;
-			font-weight: normal;
-			
-		}
-		a {
-			color: #fff;
-			text-decoration: none;
-			background: none;
-			font-size: 12px;
-			display: inline-block;
-			margin-bottom: 7px;
-			&:hover {
-				text-decoration: underline;
-			}
-		}
-
-		#block-block-2 {
-			color: #fff;
-			background-color: #000;
-			font-size: 12px;
-			padding-top: 21px;
-			position:relative;
-				&:before{
-			  content: "";
-			  display: block;
-			  background-color: #000;
-			  top:0;
-			  left: -100%;
-			  right: -100%;
-			  height: 100%;
-			  position: absolute;
-			  z-index:-1;
-			}
-		}
-	}
-
-	
-
-	
-	
-
-	.footer-bottom-company-name {
-		float: left;
-		font-size: 12px;
-		font-weight: bold;
-	}
-	.footer-bottom-links-wrapper {
-		float: right;
-	}
-	.footer-bottom-links li {
-		display: inline-block;
-		list-style: none;
-		a {
-				font-weight: bold;
-				color: #fff;
-				text-decoration: none;
-				padding-right: 13px;
-				padding-left: 13px;
-			}
-		&:last-child a {
-			border-right: none;
-			padding-right: 0;
-		}
-	}
-
+    padding-top: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    .region-footer {
+        background-color: @darkGray2;
+        position: relative;
+        &:before {
+            content: "";
+            display: block;
+            background-color: @darkGray2;
+            left: -100%;
+            right: -100%;
+            height: 100%;
+            position: absolute;
+            z-index: -1;
+        }
+        .panel-pane {
+            margin: 40px 0;
+        }
+        h2 {
+            font-size: @font-size-h4;
+            text-align: left;
+            color: @white;
+            margin-bottom: 20px;
+            font-weight: normal;
+        }
+        a {
+            color: #fff;
+            text-decoration: none;
+            background: none;
+            font-size: 12px;
+            display: inline-block;
+            margin-bottom: 7px;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+        #block-block-2 {
+            color: #fff;
+            background-color: #000;
+            font-size: 12px;
+            padding-top: 21px;
+            position: relative;
+            &:before {
+                content: "";
+                display: block;
+                background-color: #000;
+                top: 0;
+                left: -100%;
+                right: -100%;
+                height: 100%;
+                position: absolute;
+                z-index: -1;
+            }
+        }
+    }
+    .footer-bottom-company-name {
+        float: left;
+        font-size: 12px;
+        font-weight: bold;
+    }
+    .footer-bottom-links-wrapper {
+        float: right;
+    }
+    .footer-bottom-links li {
+        display: inline-block;
+        list-style: none;
+        a {
+            font-weight: bold;
+            color: #fff;
+            text-decoration: none;
+            padding-right: 13px;
+            padding-left: 13px;
+        }
+        &:last-child a {
+            border-right: none;
+            padding-right: 0;
+        }
+    }
 }
