--- a/typography.less
+++ b/typography.less
@@ -151,6 +151,14 @@ mark,
   margin: 0;
   border-bottom: 0;
 }
+label{
+  position: absolute;
+  top: -999999em;
+  left: auto;
+  width: 1px;
+  height: 1px;
+  overflow:hidden;
+}
 
 /*
 // Lists
