--- a/homepage-references.less
+++ b/homepage-references.less
@@ -19,17 +19,15 @@
             a:hover {
                 text-decoration: none;
                 color: #333333;
+                background-color: #f4f2f0;
+                display: block;
                 .title {
-                    text-decoration: underline;
                     color: #c10b4c;
                 }
             }
             .reference-article {
                 border-top: 3px solid #000;
                 padding: 40px 15px;
-                &:hover {
-                    background-color: #f4f2f0;
-                }
             }
             span {
                 display: block;
