--- a/style.less
+++ b/style.less
@@ -1,17 +1,4 @@
 @import "custom_bootstrap";
-body {
-	width: 100%;
-	overflow-x: hidden;
-}
-a {
-	color: @grey;
-	text-decoration: none;
-	&:hover {
-		color: @red;
-		text-decoration: underline;
-	}
-}
-
 @import 'typography';
 @import 'header';
 @import 'login';
@@ -21,146 +8,115 @@ a {
 @import 'megamenu';
 @import 'home';
 @import 'welcome';
+@import 'breadcrumb';
+@import 'custom-top-wrapper';
+@import 'article-list';
 @import 'node-persona';
 @import 'node-combo-article';
 @import 'node-article';
+@import 'sidebar-links';
 @import 'footer';
-
 .pagination > li:first-child > a {
-	border-radius: 0;
-}
-.pagination>.active>a, 
-.pagination>.active>span, 
-.pagination>.active>a:hover, 
-.pagination>.active>span:hover, 
-.pagination>.active>a:focus, 
-.pagination>.active>span:focus {
-	background-color: @red;
-	border-color: @red;
+    border-radius: 0;
 }
 
-.pagination>li:last-child>a, 
+.pagination>.active>a,
+.pagination>.active>span,
+.pagination>.active>a:hover,
+.pagination>.active>span:hover,
+.pagination>.active>a:focus,
+.pagination>.active>span:focus {
+    background-color: @red;
+    border-color: @red;
+}
+
+.pagination>li:last-child>a,
 .pagination>li:last-child>span {
-	border-radius: 0;
+    border-radius: 0;
 }
 
 .search-results li {
-	list-style: none;
+    list-style: none;
 }
 
 .search-results .title {
-	font-size: 47px;
+    font-size: 47px;
 }
 
 .search-form {
-	display: none;
+    display: none;
 }
-
 
 // --------------------
-
-
-
 .main-container #page-header {
-	background-color: @grey;
-	position: relative;
-	&:before{
-	  content: "";
-	  display: block;
-	  background-color: @grey;
-	  top:0;
-	  left: -100%;
-	  right: -100%;
-	  height: 100%;
-	  position: absolute;
-	  z-index:-1;
-	}
-}
-
-.two-col-custom {
-	.two-col-custom-top {
-		text-align: center;
-		background-color:  @red ;
-		color: @white;
-		position: relative;
-		margin-bottom: 40px;
-		&:before {
-			content: "";
-			display: block;
-			background-color:  @red ;
-			top:0;
-			left: -100%;
-			right: -100%;
-			height: 100%;
-			position: absolute;
-			z-index:-1;
-		}
-		.inside {
-			padding:30px 0;
-		}
-		.pane-1 p {
-			.h2();
-
-		}
-	}
-
-	.two-col-custom-right {
-
-		.views-row:first-child {
-			border-top: 5px solid #000;
-			padding-top: 30px;
-		}
-		.views-field-title-1 {
-			font-size: 32px;
-			a {
-				text-decoration: none;
-				color: @black;
-				&:hover {
-					color: @black;
-				}
-			}
-		}
-
-		.views-row {
-			border-bottom: 1px solid @offWhite;
-			padding-bottom: 40px;
-			margin-bottom: 0px;
-			padding: 30px 10px;
-		}
-		.views-row:hover {
-			background-color:@offWhite;
-		}
-		.views-row:last-child {
-			border-bottom: none;
-		}
-		.views-field-title-1 a {
-			line-height: 45px;
-			display: block;
-			margin-bottom: 30px;
-		}
-
-		.field-content {
-			margin-bottom: 20px;
-		}
-	}
+    background-color: @grey;
+    position: relative;
+    &:before {
+        content: "";
+        display: block;
+        background-color: @grey;
+        top: 0;
+        left: -100%;
+        right: -100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+    }
 }
 
 
+/*
 
-.breadcrumb {
-	margin-bottom: 0;
-	background-color: @offWhite;
-	position: relative;
-	&:before {
-		content: "";
-		display: block;
-		background-color:  @offWhite ;
-		top:0;
-		left: -100%;
-		right: -100%;
-		height: 100%;
-		position: absolute;
-		z-index:-1;
-	}
+.custom-top-wrapper {
+    .two-col-custom-right {
+        .views-row:first-child {
+            border-top: 5px solid #000;
+            padding-top: 30px;
+        }
+        .views-field-title-1 {
+            font-size: 32px;
+            a {
+                text-decoration: none;
+                color: @black;
+                &:hover {
+                    color: @black;
+                }
+            }
+        }
+        .views-row {
+            border-bottom: 1px solid @offWhite;
+            padding-bottom: 40px;
+            margin-bottom: 0px;
+            padding: 30px 10px;
+        }
+        .views-row:hover {
+            background-color: @offWhite;
+        }
+        .views-row:last-child {
+            border-bottom: none;
+        }
+        .views-field-title-1 a {
+            line-height: 45px;
+            display: block;
+            margin-bottom: 30px;
+        }
+        .field-content {
+            margin-bottom: 20px;
+        }
+    }
 }
+*/
 
+.landing {}
+
+.role-landing {}
+
+.combo-landing {}
+
+.artical-landing {}
+
+.search-landing {}
+
+.sidebar-toc {}
+
+.sidebar-links {}
