--- a/typography.less
+++ b/typography.less
@@ -143,6 +143,22 @@ mark,
 }
 
 */
+
+
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+a {
+  color: @grey;
+  text-decoration: none;
+  &:hover {
+    color: @red;
+    text-decoration: underline;
+  }
+}
+
+
 // Page header
 // -------------------------
 
