--- a/sidebar-links.less
+++ b/sidebar-links.less
@@ -1,7 +1,8 @@
 .sidebar-links,
 .sidebar-toc {
     border-top: 3px solid #000;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
+    padding: 15px 0;
     ul {
         margin: 0;
         padding: 0;
@@ -12,7 +13,8 @@
     }
     .pane-title {
         font-size: 16px;
-        padding-bottom: 30px
+        padding-bottom: 30px;
+        text-transform: uppercase;
     }
     .views-row {
         padding-bottom: 15px;
