--- a/breadcrumb.less
+++ b/breadcrumb.less
@@ -1,16 +1,20 @@
 .breadcrumb {
-	margin-bottom: 0;
-	background-color: @offWhite;
-	position: relative;
-	&:before {
-		content: "";
-		display: block;
-		background-color:  @offWhite ;
-		top:0;
-		left: -100%;
-		right: -100%;
-		height: 100%;
-		position: absolute;
-		z-index:-1;
-	}
+    margin-bottom: 0;
+    background-color: @offWhite;
+    position: relative;
+    color: @red;
+    &:before {
+        content: "";
+        display: block;
+        background-color: @offWhite;
+        top: 0;
+        left: -100%;
+        right: -100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+    }
+    .role-landing & {
+        color: @gold;
+    }
 }
