--- a/typography.less
+++ b/typography.less
@@ -22,18 +22,13 @@ h1, h2, h3, h4, h5, h6,
     color: @headings-small-color;
   }
 }
-
+*/
 h1, .h1,
 h2, .h2,
 h3, .h3 {
-  margin-top: @line-height-computed;
-  margin-bottom: (@line-height-computed / 2);
-
-  small,
-  .small {
-    font-size: 65%;
-  }
+  margin: 0;
 }
+/*
 h4, .h4,
 h5, .h5,
 h6, .h6 {
@@ -175,7 +170,9 @@ label{
   height: 1px;
   overflow:hidden;
 }
-
+tr td{
+  padding: 7px;
+}
 /*
 // Lists
 // -------------------------
